# GASPware

./: .gitignore  CMakeLists.txt
cmake/: Ygl.cmake  cmat.cmake  gsort.cmake  inter.cmake  recal.cmake  sadd.cmake  stopp.cmake  tape.cmake  xtrackn.cmake
cmake/Templates/: GASPware-env.sh.in
